--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -7,6 +7,40 @@
 </head>
 <body>
 
+<div id="sidebar">
+    <label>PLACEHOLDER</label>
+    <ul>
+       <h2>placeholder</h2>
+        <li>stephen</li>
+    </ul>
+</div>
+
+<div id="body">
+    <div id="fivescores">
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+            <li>four</li>
+            <li>five</li>
+        </ul>
+    </div>
+
+    <div id="facts">
+        <ul>
+            <li>longest streak</li>
+            <li>hit percentage</li>
+            <li>logged targets</li>
+            <li>average score</li>
+        </ul>
+
+    </div>
+
+</div>
+
+<div id="heatmap">
+    <p>placeholder for gmap</p>
+</div>
 
 </body>
 </html>
