--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+    <link rel="stylesheet" href="static/trap_scorekeeping/site.css">
+
 </head>
 <body>
 
@@ -42,5 +44,9 @@
     <p>placeholder for gmap</p>
 </div>
 
+
+     <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+     <script src="http://cdn.jsdelivr.net/lodash/4.11.2/lodash.js"></script>
+     <script src="site.js"></script>
 </body>
 </html>
