--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-
+<div class="flex">
 <div id="sidebar">
     <label>PLACEHOLDER</label>
     <ul>
@@ -44,7 +44,7 @@
     <p>placeholder for gmap</p>
 </div>
 
-
+</div>
      <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
      <script src="http://cdn.jsdelivr.net/lodash/4.11.2/lodash.js"></script>
      <script src="site.js"></script>
