--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -4,49 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <link rel="stylesheet" href="static/trap_scorekeeping/site.css">
+    <link rel="stylesheet" href="static/trap_scorekeeping/index.css">
 
 </head>
 <body>
 <div class="flex">
-<div id="sidebar">
-    <label>PLACEHOLDER</label>
+<nav>
     <ul>
-       <h2>placeholder</h2>
+       <h2>sidebar</h2>
         <li>stephen</li>
+
+        <li>other user</li>
     </ul>
-</div>
+</nav>
+<div id="main">
+    <h1 id="header">allthatshitbyme.txt</h1>
 
-<div id="body">
-    <div id="fivescores">
-        <ul>
-            <li>one</li>
-            <li>two</li>
-            <li>three</li>
-            <li>four</li>
-            <li>five</li>
-        </ul>
+        <div id="content">
+
+            <div id="fivescores">
+                <ul>
+                    <h4>recent games:</h4>
+                    <li>one</li>
+                    <li>two</li>
+                    <li>three</li>
+                    <li>four</li>
+                    <li>five</li>
+                </ul>
+            </div>
+
+            <div id="facts">
+                <ul>
+                    <h4>stats:</h4>
+                    <li>longest streak</li>
+                    <li>hit percentage</li>
+                    <li>logged targets</li>
+                    <li>average score</li>
+                </ul>
+            </div>
+
+
+            <div id="heatmap">
+                <h4>map placeholder</h4>
+            <p>placeholder for gmap</p><p>sdhflasdkjhflkjasdhflkashflkasjfhlasdkjfhsadlkjfhasdlkfjhsadlfkjsahdflkjasdhf</p>
+            </div>
+
+
+        </div>
     </div>
-
-    <div id="facts">
-        <ul>
-            <li>longest streak</li>
-            <li>hit percentage</li>
-            <li>logged targets</li>
-            <li>average score</li>
-        </ul>
-
-    </div>
-
-</div>
-
-<div id="heatmap">
-    <p>placeholder for gmap</p>
-</div>
-
 </div>
      <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
      <script src="http://cdn.jsdelivr.net/lodash/4.11.2/lodash.js"></script>
-     <script src="site.js"></script>
 </body>
 </html>
