--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -12,9 +12,10 @@
 <nav>
     <ul>
        <h2>sidebar</h2>
-        <li>stephen</li>
-
-        <li>other user</li>
+       {% for user in sidebar_users %}
+        <li> {{ user }}
+        </li>
+       {% endfor %}
     </ul>
 </nav>
 <div id="main">
@@ -25,11 +26,10 @@
             <div id="fivescores">
                 <ul>
                     <h4>recent games:</h4>
-                    <li>one</li>
-                    <li>two</li>
-                    <li>three</li>
-                    <li>four</li>
-                    <li>five</li>
+                    {% for game in rounds %}
+                    <li> {{ game }}
+                    </li>
+                    {% endfor %}
                 </ul>
             </div>
 
