nuking old streak code

--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -11,7 +11,7 @@
 <div class="flex">
 <nav>
     <ul>
-       <h2>sidebar</h2>
+       <h2>Users:</h2>
        {% for user in sidebar_users %}
         <li> {{ user }}
         </li>
@@ -19,7 +19,7 @@
     </ul>
 </nav>
 <div id="main">
-    <h1 id="header">allthatshitbyme.txt</h1>
+    000
 
         <div id="content">
 
