--- a/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
@@ -6,42 +6,42 @@
     <title>Enter New Score</title>
     <link rel="stylesheet" href="static/trap_scorekeeping/score_entry.css">
 </head>
-<body>
+<body class="flex">
   <form action="submit">
     <div class="row">
-      <label><input type="checkbox" name="target" value="1"> Target  1</label>
-      <label><input type="checkbox" name="target" value="2"> Target  2</label>
-      <label><input type="checkbox" name="target" value="3"> Target  3</label>
-      <label><input type="checkbox" name="target" value="4"> Target  4</label>
-      <label><input type="checkbox" name="target" value="5"> Target  5</label>
+      <label><input type="checkbox" name="target" value="1"> Target  1<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="2"> Target  2<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="3"> Target  3<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="4"> Target  4<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="5"> Target  5<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
     </div>
     <div class="row">
-      <label><input type="checkbox" name="target" value="6"> Target  6</label>
-      <label><input type="checkbox" name="target" value="7"> Target  7</label>
-      <label><input type="checkbox" name="target" value="8"> Target  8</label>
-      <label><input type="checkbox" name="target" value="9"> Target  9</label>
-      <label><input type="checkbox" name="target" value="10"> Target 10</label>
+      <label><input type="checkbox" name="target" value="6"> Target  6<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="7"> Target  7<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="8"> Target  8<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="9"> Target  9<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="10"> Target 10<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
     </div>
     <div class="row">
-      <label><input type="checkbox" name="target" value="11"> Target 11</label>
-      <label><input type="checkbox" name="target" value="12"> Target 12</label>
-      <label><input type="checkbox" name="target" value="13"> Target 13</label>
-      <label><input type="checkbox" name="target" value="14"> Target 14</label>
-      <label><input type="checkbox" name="target" value="15"> Target 15</label>
+      <label><input type="checkbox" name="target" value="11"> Target 11<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="12"> Target 12<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="13"> Target 13<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="14"> Target 14<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="15"> Target 15<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
     </div>
     <div class="row">
-      <label><input type="checkbox" name="target" value="16"> Target 16</label>
-      <label><input type="checkbox" name="target" value="17"> Target 17</label>
-      <label><input type="checkbox" name="target" value="18"> Target 18</label>
-      <label><input type="checkbox" name="target" value="19"> Target 19</label>
-      <label><input type="checkbox" name="target" value="20"> Target 20</label>
+      <label><input type="checkbox" name="target" value="16"> Target 16<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="17"> Target 17<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="18"> Target 18<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="19"> Target 19<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="20"> Target 20<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
     </div>
     <div class="row">
-      <label><input type="checkbox" name="target" value="21"> Target 21</label>
-      <label><input type="checkbox" name="target" value="22"> Target 22</label>
-      <label><input type="checkbox" name="target" value="23"> Target 23</label>
-      <label><input type="checkbox" name="target" value="24"> Target 24</label>
-      <label><input type="checkbox" name="target" value="25"> Target 25</label>
+      <label><input type="checkbox" name="target" value="21"> Target 21<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="22"> Target 22<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="23"> Target 23<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="24"> Target 24<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="25"> Target 25<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
     </div>
   </form>
 
