using forms for database entries

--- a/trap_scorekeeping/templates/trap_scorekeeping/round_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/round_entry.html
@@ -5,7 +5,10 @@
     <title>Round Entry</title>
   </head>
   <body>
-    {{ form.as_p }}
+    <form action="" method="POST">
+      {% csrf_token %}
+      {{ form.as_p }}
     <input type='submit' value="Create Round" />
+    </form>
   </body>
 </html>
