messing with data input

--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -55,6 +55,7 @@
 </div>
      <a href="{% url 'admin:index' %}">admin page</a>
      <a href="{% url 'score_entry' %}">score entry</a>
+     <a href="{% url 'round_entry' %}">round entry</a>
      <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
      <script src="http://cdn.jsdelivr.net/lodash/4.11.2/lodash.js"></script>
 </body>
