--- a/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
@@ -7,44 +7,45 @@
     <link rel="stylesheet" href="static/trap_scorekeeping/score_entry.css">
 </head>
 <body class="flex">
-  <form action="submit">
+  <form action="{% url 'round_entry' %}" method="POST">
     <div class="row">
-      <label><input type="checkbox" name="target" value="a"> Target  1<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="b"> Target  2<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="c"> Target  3<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="d"> Target  4<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="e"> Target  5<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="a"> Target  1<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="b"> Target  2<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="c"> Target  3<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="d"> Target  4<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="e"> Target  5<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
     </div>
     <div class="row">
-      <label><input type="checkbox" name="target" value="f"> Target  6<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="g"> Target  7<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="h"> Target  8<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="i"> Target  9<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="j"> Target 10<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="f"> Target  6<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="g"> Target  7<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="h"> Target  8<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="i"> Target  9<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="j"> Target 10<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
     </div>
     <div class="row">
-      <label><input type="checkbox" name="target" value="k"> Target 11<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="l"> Target 12<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="m"> Target 13<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="n"> Target 14<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="o"> Target 15<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="k"> Target 11<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="l"> Target 12<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="m"> Target 13<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="n"> Target 14<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="o"> Target 15<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
     </div>
     <div class="row">
-      <label><input type="checkbox" name="target" value="p"> Target 16<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="q"> Target 17<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="r"> Target 18<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="s"> Target 19<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="t"> Target 20<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="p"> Target 16<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="q"> Target 17<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="r"> Target 18<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="s"> Target 19<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="t"> Target 20<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
     </div>
     <div class="row">
-      <label><input type="checkbox" name="target" value="u"> Target 21<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="v"> Target 22<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="w"> Target 23<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="x"> Target 24<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
-      <label><input type="checkbox" name="target" value="y"> Target 25<img src="{% static 'trap_scorekeeping/wholeclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="u"> Target 21<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="v"> Target 22<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="w"> Target 23<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="x"> Target 24<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="target" value="y"> Target 25<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
     </div>
+    <input type='submit' value="Enter score" />
   </form>
-  <input type='submit' value="Enter score" />
+
 
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
   <script src="http://cdn.jsdelivr.net/lodash/4.11.2/lodash.js"></script>
