--- a/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
@@ -8,6 +8,7 @@
 </head>
 <body class="flex">
   <form action="{% url 'round_entry' %}" method="POST">
+    {% csrf_token %}
     <div class="row">
       <label><input type="checkbox" name="target" value="a"> Target  1<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
       <label><input type="checkbox" name="target" value="b"> Target  2<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
@@ -43,7 +44,7 @@
       <label><input type="checkbox" name="target" value="x"> Target 24<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
       <label><input type="checkbox" name="target" value="y"> Target 25<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
     </div>
-    <input type='submit' value="Enter score" />
+    <input type="submit" value="Enter score" />
   </form>
 
 
