--- a/trap_scorekeeping/templates/trap_scorekeeping/ack_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/ack_entry.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Score Entered!</title>
 </head>
 <body>
-
+  <a href="{% url 'index' %}">Go to the homepage!</a>
+  <a href="{% url 'round_entry' %}">Enter another round!</a>
+  <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+  <script src="http://cdn.jsdelivr.net/lodash/4.11.2/lodash.js"></script>
 </body>
 </html>
