--- a/trap_scorekeeping/static/trap_scorekeeping/score_entry.css
+++ b/trap_scorekeeping/static/trap_scorekeeping/score_entry.css
@@ -3,9 +3,11 @@
   display: flex;
 }
 
-.row {
-  flex: 1;
-  flex-direction: column;
+
+
+form{
+  display: flex;
+  display: grid;
 }
 
 label img {
