--- a/trap_scorekeeping/static/trap_scorekeeping/index.css
+++ b/trap_scorekeeping/static/trap_scorekeeping/index.css
@@ -1,34 +1,21 @@
 .flex{
   display: flex;
+  background-color:rgba(0, 0, 255, 0.5)
 }
 h1{
-  background-color:rgba(0, 0, 255, 0.5)
+
+
 }
 
 nav{
   flex-width: 200px;
   padding-right: 10px;
   padding-top: 20px;
-  background-color:rgba(0, 0, 255, 0.5)
 }
 
 #main{
-flex-direction: column;
-margin-left: 10px;
-margin-right: 10px;
-}
-
-
-#fivescores{
-  flex: 3;
-}
-
-#facts{
-  flex: 3;
+  display: flex;
+  flex-direction: row;
   margin-left: 10px;
   margin-right: 10px;
-}
-
-#heatmap{
-  flex: 5;
 }
