--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -35,10 +35,10 @@
         </ul>
         <ul id="facts">
             <h4>stats:</h4>
-            <li>longest streak</li>
-            <li>hit percentage</li>
-            <li>logged targets</li>
-            <li>average score</li>
+            <li>Longest Streak: {{ longest_streak }} </li>
+            <li> Total Shots: {{ shots }} </li>
+            <li> Hit Percentage: {{ hit_percent }}%</li>
+            <li>Average Score: {{ average_score }}</li>
         </ul>
   </div>
 </div>
