--- a/trap_scorekeeping/static/trap_scorekeeping/score_entry.css
+++ b/trap_scorekeeping/static/trap_scorekeeping/score_entry.css
@@ -4,11 +4,12 @@
 }
 
 
-
-form{
-  display: flex;
-  display: grid;
+.row{
+    display: block;
+    float: left;
+    width: 25%;
 }
+
 
 label img {
   flex: 1;
