--- a/trap_scorekeeping/static/trap_scorekeeping/index.css
+++ b/trap_scorekeeping/static/trap_scorekeeping/index.css
@@ -1,21 +1,26 @@
 .flex{
   display: flex;
-  background-color:rgba(0, 0, 255, 0.5)
-}
-h1{
-
-
+  justify-content: space-between;
+  flex-direction: row;
+  background-color: rgba(10, 82, 65, .5);
 }
 
 nav{
-  flex-width: 200px;
+  width: 200px;
   padding-right: 10px;
   padding-top: 20px;
 }
 
-#main{
+#content {
+  flex: 1;
   display: flex;
-  flex-direction: row;
-  margin-left: 10px;
-  margin-right: 10px;
+  justify-content: space-around;
+  margin-left: 20px;
+  margin-right: 20px;
+
+}
+
+.title{
+  display: flex;
+  justify-content: center;
 }
