--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="static/trap_scorekeeping/index.css">
 </head>
 <body>
-  <img src="{% static 'trap_scorekeeping/scorekeeper.png' %}"/>
+  <img src="{% static 'trap_scorekeeping/scorekeeper.png' %}" id="title"/>
 <div class="flex">
   <nav>
     <h2>Users:</h2>
