--- a/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
@@ -10,25 +10,25 @@
   <h1>Select the targets you missed</h1>
   <form action="ack_entry.html" method="POST" class="flex">
     {% csrf_token %}
-      <label><input type="checkbox" name="t1" id="t1" value="a"> Target  1<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t2" id="t2" value="b"> Target  2<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t3" id="t3" value="c"> Target  3<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t4" id="t4" value="d"> Target  4<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t5" id="t5" value="e"> Target  5<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t6" id="t6" value="f"> Target  6<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t7" id="t7" value="g"> Target  7<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t8" id="t8" value="h"> Target  8<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t9" id="t9" value="i"> Target  9<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t10" id="t10" value="j"> Target 10<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t11" id="t11" value="k"> Target 11<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t12" id="t12" value="l"> Target 12<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t13" id="t13" value="m"> Target 13<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t14" id="t14" value="n"> Target 14<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t15" id="t15" value="o"> Target 15<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t16" id="t16" value="p"> Target 16<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t17" id="t17" value="q"> Target 17<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t18" id="t18" value="r"> Target 18<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
-      <label><input type="checkbox" name="t19" id="t19" value="s"> Target 19<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t1" id="t1" value="a"> Target  1<img id="t1img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t2" id="t2" value="b"> Target  2<img id="t2img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t3" id="t3" value="c"> Target  3<img id="t3img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t4" id="t4" value="d"> Target  4<img id="t4img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t5" id="t5" value="e"> Target  5<img id="t5img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t6" id="t6" value="f"> Target  6<img id="t6img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t7" id="t7" value="g"> Target  7<img id="t7img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t8" id="t8" value="h"> Target  8<img id="t8img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t9" id="t9" value="i"> Target  9<img id="t9img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t10" id="t10" value="j"> Target 10<img id="t10img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t11" id="t11" value="k"> Target 11<img id="t11img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t12" id="t12" value="l"> Target 12<img id="t12img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t13" id="t13" value="m"> Target 13<img id="t13img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t14" id="t14" value="n"> Target 14<img id="t14img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t15" id="t15" value="o"> Target 15<img id="t15img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t16" id="t16" value="p"> Target 16<img id="t16img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t17" id="t17" value="q"> Target 17<img id="t17img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t18" id="t18" value="r"> Target 18<img id="t18img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
+      <label><input type="checkbox" name="t19" id="t19" value="s"> Target 19<img id="t19img" src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
       <label><input type="checkbox" name="t20" id="t20" value="t"> Target 20<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
       <label><input type="checkbox" name="t21" id="t21" value="u"> Target 21<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
       <label><input type="checkbox" name="t22" id="t22" value="v"> Target 22<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
@@ -37,9 +37,12 @@
       <label><input type="checkbox" name="t25" id="t25" value="y"> Target 25<img src="{% static 'trap_scorekeeping/brokenclay.png' %}"/></label>
       <input type="submit" value="Enter score" id="bottom"/>
   </form>
-
-  <script src="{% static 'trap_scorekeeping/score_entry.js' %}"></script>
+  <script type="text/javascript">
+     var brokenClay = "{% static 'trap_scorekeeping/brokenclay.png' %}";
+     var wholeClay = "{% static 'trap_scorekeeping/wholeClay.png' %}";
+  </script>
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
   <script src="http://cdn.jsdelivr.net/lodash/4.11.2/lodash.js"></script>
+  <script src="{% static 'trap_scorekeeping/score_entry.js' %}"></script>
 </body>
 </html>
