--- a/trap_scorekeeping/templates/trap_scorekeeping/round_entry2.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/round_entry2.html
@@ -9,7 +9,7 @@
 
     <title>Enter the details for your last round:</title>
     <link href="{% static 'trap_scorekeeping/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'trap_scorekeeping/round_entry2.css' %}" rel="stylesheet">
+    <link href="{% static 'trap_scorekeeping/base.css' %}" rel="stylesheet">
   </head>
 
   <body>
