--- a/trap_scorekeeping/templates/trap_scorekeeping/user_page.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/user_page.html
@@ -9,6 +9,8 @@
 
     <title>User</title>
     <link href="{% static 'trap_scorekeeping/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <link href="{% static 'trap_scorekeeping/base.css' %}" rel="stylesheet">
   </head>
 
   <body>
