--- a/trap_scorekeeping/templates/trap_scorekeeping/ack_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/ack_entry.html
@@ -20,10 +20,10 @@
     <div class="starter-template">
       <h3>Confirm round information is correct:</h3>
       <p>
-        put round shit here
+        {{ round_data }}
       </p>
-      <a href="{% static 'index2.html' %}">All information is correct!</a>
-      <a href="{% static 'round_entry2.html' %}">This isn't correct, I need to re-enter.</a>
+      <a href="{% url 'index' %}">All information is correct!</a>
+      <a href="{% url 'delete_submission' round_data.id  %}">This isn't correct, I need to re-enter.</a>
     </div>
   </div>
 
@@ -32,5 +32,6 @@
   <script>window.jQuery || document.write('<script src="{% static 'trap_scorekeeping/js/jquery.min.js' %}"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
   <script src="{% static 'trap_scorekeeping/js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'trap_scorekeeping/site.js' %}"></script>
 </body>
 </html>
