--- a/trap_scorekeeping/templates/trap_scorekeeping/round_entry2.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/round_entry2.html
@@ -18,7 +18,7 @@
       <a class="navbar-brand" href="{% url 'index' %}">Score Keeper</a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">active<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'round_entry' %}">Enter a New Round</a>
