--- a/trap_scorekeeping/templates/trap_scorekeeping/index2.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index2.html
@@ -32,7 +32,7 @@
                 <ul class="list-group">
                   <h4>Users:</h4>
                   {% for user in sidebar_users %}
-                  <li class="list-group-item">{{ user }}</li>
+                  <li class="list-group-item"><a href="{% url 'player_page' user.username %}">{{ user }}</a></li>
                   {% endfor %}
                 </ul>
               <ul>
