--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -2,46 +2,97 @@
 {% load staticfiles %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>index</title>
-    <link rel="stylesheet" href="static/trap_scorekeeping/index.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
+
+  <title>Index</title>
+  <link href="{% static 'trap_scorekeeping/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'trap_scorekeeping/index2.css' %}" rel="stylesheet">
+  <link href="{% static 'trap_scorekeeping/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'trap_scorekeeping/css/bootstrap-theme.min.css %}" rel="stylesheet">
+  <link href="{% static 'trap_scorekeeping/index2.css' %}" rel="stylesheet">
 </head>
+
 <body>
-  <img src="{% static 'trap_scorekeeping/scorekeeper.png' %}" id="title"/>
-<div class="flex">
-  <nav>
-    <h2>Enter New Round</h2>
-    <a href="{% url 'round_entry' %}">round entry</a>
-    <h2>Enter New Shotgun</h2>
-    <h2>Enter New Shotgun Shells</h2>
-    <h2>Users:</h2>
-      <ul>
-         {% for user in sidebar_users %}
-          <li> {{ user }} </li>
-         {% endfor %}
-      </ul>
+
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Bootstrap theme</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
   </nav>
-  <div id="content">
-      <ul>
-        <h4>recent games:</h4>
-            {% for game in rounds %}
-            <li> <h4>{{ game.player }}:</h4> {{ game.score }}</li>
-            {% endfor %}
-        </ul>
-        <ul>
-            <h4>stats:</h4>
-            <li>Longest Streak: {{ longest_streak }} </li>
-            <li> Total Shots: {{ shots }} </li>
-            <li> Hit Percentage: {{ hit_percent }}%</li>
-            <li>Average Score: {{ average_score }}</li>
-        </ul>
+
+  <div class="container theme-showcase" role="main">
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <h1>Theme example</h1>
+      <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
+    </div>
   </div>
-</div>
-     <a href="{% url 'admin:index' %}">admin page</a>
-     <a href="{% url 'round_entry' %}">round entry</a>
-     <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
-     <script src="http://cdn.jsdelivr.net/lodash/4.11.2/lodash.js"></script>
+
+
+  <div class="container">
+
+    <div class="starter-template">
+      <h2>Trap Scorekeeper</h2>
+      <div id="content">
+        <div id="lists">
+        <ul>
+          <h4>recent games:</h4>
+              {% for game in rounds %}
+              <li> <h4>{{ game.player }}:</h4> {{ game.score }}</li>
+              {% endfor %}
+          </ul>
+          <ul>
+              <h4>stats:</h4>
+              <li>Longest Streak: {{ longest_streak }} </li>
+              <li> Total Shots: {{ shots }} </li>
+              <li> Hit Percentage: {{ hit_percent }}%</li>
+              <li>Average Score: {{ average_score }}</li>
+          </ul>
+          </div>
+        </div>
+    </div>
+
+  </div>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="{% static 'trap_scorekeeping/js/jquery.min.js' %}"><\/script>')</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+  <script src="{% static 'trap_scorekeeping/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
