--- a/trap_scorekeeping/templates/trap_scorekeeping/index2.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index2.html
@@ -13,7 +13,41 @@
 
   <body>
 
-    <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Bootstrap theme</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <!-- <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
       <a class="navbar-brand" href="{% url 'index' %}">Score Keeper</a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
@@ -21,33 +55,38 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'round_entry' %}">Enter a New Round</a>
-        </li>
-      </ul>
-    </nav>
+
+            <a href="#" class="dropdown-toggle  navbar-dark bg-inverse" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">users <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                {% for user in sidebar_users %}
+                <li> <a href"{% url 'player_page' user.username %}"> {{ user }} </a> </li>
+                <li role="separator" class="divider"></li>
+                {% endfor %}
+              </ul>
+            </li>
+        </ul>
+    </nav> -->
 
     <div class="container">
 
       <div class="starter-template">
+        <h2>Trap Scorekeeper</h2>
         <div id="content">
-                <ul class="list-group">
-                  <h4>Users:</h4>
-                  {% for user in sidebar_users %}
-                  <li class="list-group-item"><a href="{% url 'player_page' user.username %}">{{ user }}</a></li>
-                  {% endfor %}
-                </ul>
-              <ul>
-                <h4>recent games:</h4>
-                    {% for game in rounds %}
-                    <li> <h4>{{ game.player }}:</h4> {{ game.score }}</li>
-                    {% endfor %}
-                </ul>
-                <ul>
-                    <h4>stats:</h4>
-                    <li>Longest Streak: {{ longest_streak }} </li>
-                    <li> Total Shots: {{ shots }} </li>
-                    <li> Hit Percentage: {{ hit_percent }}%</li>
-                    <li>Average Score: {{ average_score }}</li>
-                </ul>
+          <div id="lists">
+          <ul>
+            <h4>recent games:</h4>
+                {% for game in rounds %}
+                <li> <h4>{{ game.player }}:</h4> {{ game.score }}</li>
+                {% endfor %}
+            </ul>
+            <ul>
+                <h4>stats:</h4>
+                <li>Longest Streak: {{ longest_streak }} </li>
+                <li> Total Shots: {{ shots }} </li>
+                <li> Hit Percentage: {{ hit_percent }}%</li>
+                <li>Average Score: {{ average_score }}</li>
+            </ul>
+            </div>
           </div>
       </div>
 
