--- a/trap_scorekeeping/templates/trap_scorekeeping/round_entry2.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/round_entry2.html
@@ -16,14 +16,15 @@
 
     <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
       <a class="navbar-brand" href="{% url 'index' %}">Score Keeper</a>
-      <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">active<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'round_entry' %}">Enter a New Round</a>
-        </li>
-      </ul>
+      <ul class="nav navbar-nav navbar-right">
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">users<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li><a href"#">{{ user }}</a></li>
+            <li role="separator" class="divider"></li>
+          </ul>
+      </li>
+    </ul>
     </nav>
 
     <div class="container">
